@@ -1,5 +1,12 @@
 2009-08-23  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* fs/hfsplus.c (grub_hfsplus_mount): Don't ignore grub_hfsplus_read_file
+	errors.
+	(grub_hfsplus_btree_iterate_node): Don't ignore grub_hfsplus_read_file
+	errors. Call grub_error when needed.
+
+2009-08-23  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* commands/search.c (search_fs): Try searching without autoload first.
 	* util/grub-mkconfig_lib.in (prepare_grub_to_access_device): Load
 	filesystem module explicitly for faster booting.
